--- a/public/index.html
+++ b/public/index.html
@@ -7,11 +7,9 @@
   </head>
   <body>
     <h1>Chat App</h1>
+    <button id="increment">+1</button>
   </body>
-  <script src="/socket.io/socket.io.js">
+  <script src="/socket.io/socket.io.js"></script>
 
-  </script>
-
-  <script src="js/chat.js">
-  </script>
+  <script src="js/chat.js"></script>
 </html>
