--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,13 @@
   </head>
   <body>
     <h1>Chat App</h1>
-    <button id="increment">+1</button>
+
+    <form id="form-message">
+      <textarea placeholder="Digite sua mensagem..." name="message"  style="width: 700px; height:120px"></textarea>
+    </br>
+      <button id="sendMessage" type="submit">Enviar</button>
+    </form>
+
   </body>
   <script src="/socket.io/socket.io.js"></script>
 
