sharing your location

--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,10 @@
       <button id="sendMessage" type="submit">Enviar</button>
     </form>
 
+    <button id="send-location">
+      Enviar localização
+    </button>
+
   </body>
   <script src="/socket.io/socket.io.js"></script>
 
