--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
     <h1>Chat App</h1>
 
     <form id="form-message">
-      <textarea placeholder="Digite sua mensagem..." name="message"  style="width: 700px; height:120px"></textarea>
+      <input placeholder="Digite sua mensagem..." name="message" />
     </br>
       <button id="sendMessage" type="submit">Enviar</button>
     </form>
