--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,8 @@
   <body>
     <h1>Chat App</h1>
 
+    <div id="messages"></div>
+
     <form id="form-message">
       <input placeholder="Digite sua mensagem..." name="message" />
     </br>
@@ -18,8 +20,16 @@
       Enviar localização
     </button>
 
+    <script id="message-template" type="text/html">
+      <div>
+        <p>{{message}}</p>
+      </div>
+    </script>
+
   </body>
   <script src="/socket.io/socket.io.js"></script>
-
   <script src="js/chat.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/mustache.js/3.0.1/mustache.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.22.2/moment.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/qs/6.6.0/qs.min.js"></script>
 </html>
