Rendering Location Messages

--- a/public/index.html
+++ b/public/index.html
@@ -16,13 +16,19 @@
       <button id="sendMessage" type="submit">Enviar</button>
     </form>
 
-    <button id="send-location">
+    <button id="send-location"> 
       Enviar localização
     </button>
 
     <script id="message-template" type="text/html">
       <div>
         <p>{{message}}</p>
+      </div>
+    </script>
+
+    <script id="location-template" type="text/html">
+      <div>
+        <p><a href="{{url}}" target="_blank">My current location</a></p>
       </div>
     </script>
 
