--- a/public/index.html
+++ b/public/index.html
@@ -4,31 +4,48 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Chat App</title>
+    <link rel="icon" href="/img/favicon.png">
+    <link rel="stylesheet" href="/css/styles.min.css">
   </head>
   <body>
-    <h1>Chat App</h1>
+    <div class="chat">
+      <div class="chat__sidebar"></div>
+      <div class="chat__main">
+        <div id="messages" class="chat__messages"></div>
 
-    <div id="messages"></div>
+        <div class="compose">
+          <form id="form-message">
+            <input placeholder="Digite sua mensagem..." name="message" />
+            <button id="sendMessage" type="submit">Enviar</button>
+          </form>
+      
+          <button id="send-location"> 
+            Enviar localização
+          </button>
+        </div>
 
-    <form id="form-message">
-      <input placeholder="Digite sua mensagem..." name="message" />
-    </br>
-      <button id="sendMessage" type="submit">Enviar</button>
-    </form>
+    
 
-    <button id="send-location"> 
-      Enviar localização
-    </button>
+      </div>
+    </div>
 
     <script id="message-template" type="text/html">
-      <div>
-        <p> {{createdAt}} - {{message}}</p>
+      <div class="message">
+        <p>
+          <span class="message__name">Ilgsson</span>
+          <span class="message__meta">{{createdAt}}</span>
+        </p>
+        <p>{{message}}</p>
       </div>
     </script>
 
     <script id="location-template" type="text/html">
-      <div>
-        <p>{{createdAt}} - <a href="{{url}}" target="_blank">My current location</a></p>
+      <div class="message">
+        <p>
+          <span class="message__name">Ilgsson</span>
+          <span class="message__meta">{{createdAt}}</span>
+        </p>
+        <p><a href="{{url}}" target="_blank">My current location</a></p>
       </div>
     </script>
 
